<resources>
    <string name="app_name">Shared Preferences Demo</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Introduzca sus Preferencias</string>
    <string name="txtNombre">Nombre</string>
    <string name="CordX">Coordenada X</string>
    <string name="CoordY">Coordenada Y</string>
    <string name="txtHint">Escriba su nombre</string>
    <string name="txtX">Valor de X</string>
    <string name="txtY">Valor de Y</string>
</resources>